--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -23,6 +23,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0px 200px;
 }
 .nav-title {
   color: #181818;
@@ -44,4 +45,18 @@ nav li {
 nav a {
   text-decoration: none;
   color: #474747;
+}
+
+.header{
+    background-color: #fff8f3;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-picture{
+    width: 500px;
 }
