--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,19 @@ body {
   padding: 15px 35px;
 }
 
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+}
 /* nav related styles */
 nav {
   display: flex;
@@ -47,16 +60,48 @@ nav a {
   color: #474747;
 }
 
-.header{
-    background-color: #fff8f3;
+.header {
+  background-color: #fff8f3;
+  background-image: url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 
-.banner{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+banner-content {
+  max-width: 500px;
 }
 
-.banner .profile-picture{
-    width: 500px;
+.banner .profile-picture {
+  width: 500px;
 }
+
+.banner-greeting {
+  font-size: 45px;
+  color: #474747;
+  margin: 0px;
+}
+
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px 0;
+}
+
+
