--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -95,7 +95,10 @@ banner-content {
 }
 
 /* main section styles */
-
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* about section styles */
 .about {
   padding: 130px;
@@ -103,5 +106,10 @@ banner-content {
   background: #fff8f3;
   margin: 130px 0;
 }
-
-
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
