--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -140,8 +140,38 @@ main section {
 }
 
 /* resume section styles */
-.resume-column-title{
+.resume-column-title {
   color: #474747;
   font-size: 30px;
   font-weight: 700;
+}
+
+.resume-container {
+  display: flex;
+  gap: 50px;
+}
+
+.resume-item-title {
+  color: #474747;
+  font-size: 25px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+.resume-item-institute,
+.resume-item-description {
+  color: #757575;
+}
+
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-container hr{
+    margin: 30px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+    
 }
