--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -162,16 +162,44 @@ main section {
   color: #757575;
 }
 
-.resume-item-institute{
-    margin-bottom: 20px;
-    margin-top: 0px;
+.resume-item-institute {
+  margin-bottom: 20px;
+  margin-top: 0px;
 }
-.resume-container hr{
-    margin: 30px;
+.resume-container hr {
+  margin: 30px;
 }
 
-.download-cv{
-    text-align: center;
-    margin-top: 50px;
-    
+.download-cv {
+  text-align: center;
+  margin-top: 50px;
+}
+
+/* footer-style */
+footer {
+  display: flex;
+  gap: 100px;
+  background-color: #fff8f3;
+  margin-top: 100px;
+  padding: 130px 200px;
+}
+
+.footer-column {
+  width: 50%;
+}
+
+.social-links{
+    margin-left: 25px;
+}
+
+.contact input[type="text"],.contact input[type="email"]
+,textarea {
+  display: block;
+  margin-bottom: 25px;
+  padding: 18px 35px;
+  color: #757575;
+  border-radius: 5px;
+  background-color: #fff;
+  border: 0px;
+  width: 100%;
 }
