--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,205 +1,37 @@
-/* common shared style */
-body {
-  font-family: "Lato", "sans-serif";
-  font-family: "Open Sans", sans-serif;
+body{
+  font-family: 'Lato',sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.text-primary {
+.text-primary{
   color: #fd6e0a;
 }
 
-.btn-primary {
-  border-radius: 5px;
-  background: #fd6e0a;
-  border: 0;
-  color: white;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 15px 35px;
+.btn-primary{
+    border-radius: 5px;
+    background: #fd6e0a;
+    border: 0;
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 15px;
 }
-
-.section-title {
-  color: #181818;
-  text-align: center;
-  font-size: 35px;
-  font-weight: 700;
-}
-.section-description {
-  color: #757575;
-  text-align: center;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 30px;
-}
-/* nav related styles */
-nav {
+nav{
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 0px 200px;
-}
-.nav-title {
-  color: #181818;
-  font-family: Open Sans;
-  font-size: 45px;
-  font-weight: 800;
+  align-self: center;
 }
 
-nav > ul {
+nav > ul{
   display: flex;
   align-items: center;
 }
-
-nav li {
+ nav li{
   list-style: none;
-  margin-right: 50px;
-}
+  margin-right: 50px; 
+ }
 
-nav a {
+ nav a{
   text-decoration: none;
-  color: #474747;
-}
-
-.header {
-  background-color: #fff8f3;
-  background-image: url(../images/header_bg.png),url(../images/developer.png);
-  background-repeat: no-repeat;
-  background-position: bottom right,top left;
-}
-
-.banner {
-  padding: 30px 30px 0px 150px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-banner-content {
-  max-width: 500px;
-}
-
-.banner .profile-picture {
-  width: 500px;
-}
-
-.banner-greeting {
-  font-size: 45px;
-  color: #474747;
-  margin: 0px;
-}
-
-.banner-title {
-  font-size: 85px;
-  font-weight: 700;
-  margin-top: 5px;
-  margin-bottom: 20px;
-}
-
-/* main section styles */
-main {
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-main section {
-  margin-top: 130px;
-}
-/* about section styles */
-.about {
-  padding: 130px;
-  border-radius: 10px;
-  background: #fff8f3;
-  margin: 130px 0;
-}
-.about-info-container {
-  display: flex;
-  justify-content: space-around;
-}
-.about-info {
-  text-align: center;
-}
-/* skill related styles */
-
-#what-i-do-description {
-  padding: 30px 150px;
-}
-
-.skill-container {
-  display: flex;
-  gap: 24px;
-}
-.skill {
-  padding: 30px;
-
-  border-radius: 5px;
-  background: #fff;
-  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
-}
-
-.skill-description {
-  color: #757575;
-}
-
-/* resume section styles */
-.resume-column-title {
-  color: #474747;
-  font-size: 30px;
-  font-weight: 700;
-}
-
-.resume-container {
-  display: flex;
-  gap: 50px;
-}
-
-.resume-item-title {
-  color: #474747;
-  font-size: 25px;
-  font-weight: 700;
-  margin-bottom: 10px;
-}
-.resume-item-institute,
-.resume-item-description {
-  color: #757575;
-}
-
-.resume-item-institute {
-  margin-bottom: 20px;
-  margin-top: 0px;
-}
-.resume-container hr {
-  margin: 30px;
-}
-
-.download-cv {
-  text-align: center;
-  margin-top: 50px;
-}
-
-/* footer-style */
-footer {
-  display: flex;
-  gap: 100px;
-  background-color: #fff8f3;
-  margin-top: 100px;
-  padding: 130px 200px;
-}
-
-.footer-column {
-  width: 50%;
-}
-
-.social-links{
-    margin-left: 25px;
-}
-
-.contact input[type="text"],.contact input[type="email"]
-,textarea {
-  display: block;
-  margin-bottom: 25px;
-  padding: 18px 35px;
-  color: #757575;
-  border-radius: 5px;
-  background-color: #fff;
-  border: 0px;
-  width: 100%;
-}
+  color: #474747
+ }
